# bazos_alert_bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.json  config.json  docker-compose.scheduled.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: scheduled-scraper.yml
src/: bot.py  config.py  database.py  main.py  notifier.py
src/scrapers/: __init__.py  base.py  bazos.py
tests/: test_database.py  test_integration.py  test_scraper.py
