[project]
name = "auto_alert_bot"
version = "1.0.0"
description = "A self-hosted bot to scrape and notify about listings from Bazos."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["requests>=2.32.5", "beautifulsoup4>=4.14.2", "lxml>=5.0.0"]

[tool.uv]
